--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "OracleConnection": "Data Source=oracle.fiap.com.br:1521/orcl;User ID=pf1954;Password=fiap24;"
+    "OracleConnection": "Data Source=oracle.fiap.com.br:1521/orcl;User ID=rm551604;Password=121102;"
   }
 }
